# code-generator

./: .env  README.md  main.py  pyproject.toml
app/: constants.py  settings.py
app/api/routers/: chat.py
app/core/: config.py
app/llm/: engine.py  generate.py  index.py  prompt.py
app/llm/loaders/: __init__.py
app/llm/tools/: __init__.py
app/llm/vectoredbs/: chroma.py
data/javascript/: test.js
data/python/: test.py
storage/chromadb/: chroma.sqlite3
storage/context/: docstore.json
